--- a/src/main/resources/templates/review/list.html
+++ b/src/main/resources/templates/review/list.html
@@ -69,6 +69,10 @@
     </div>
   </section>
 
+  <div id="certifyRequiredMessage" class="alert alert-warning d-none" role="alert">
+    위치 인증을 완료하면 리뷰를 작성할 수 있습니다.
+  </div>
+
   <div id="certifySuccessMessage" class="alert alert-success d-none" role="alert">
     위치 인증이 완료되었습니다. 이제 리뷰를 작성할 수 있습니다.
   </div>
